fix horizontal scrollbar issue

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,13 +4,14 @@ header.user {
   justify-content: center;
   align-items: center;
   height: 400px;
-  width: 40%;
+  width: 100%;
   background-color: #8A9BD0;
   background-image: url("../images/45-degree-fabric-light.png");
 }
 
 @media only screen and (min-width: 1024px) {
   header.user {
+    width: 40%;
     margin: 240px 140px 0px 60px;
   }
 }
